# HandEstimator

./: CMakeLists.txt  FilterDemo.cpp  Grabber_demo.cpp  HandEst.txt  README.md  config.cfg  fkdemo.cpp  main.cpp  optimizationTest.cpp
include/: TestReadME.txt  handest_defs.h
include/Filter/: filter.h  filterPCL.h
include/Grabber/: grabber.h  kinect_grabber.h
include/Kinematic/: forward_kinematics.h  kinematic_liego.h
include/Optimization/: optimization.h  optimizationPSO.h
include/OptimizationFunction/: optimizationFunction.h  optimizationFunctionGauss.h  optimizationFunctionPF.h
include/Visualizer/: visualizer.h  visualizerGL.h  visualizerPCL.h
resources/joints/: finger_bottom.pcd  finger_middle.pcd  finger_top.pcd  palm.pcd  thumb_bottom.pcd  thumb_top.pcd
resources/joints2/: finger_bottom.pcd  finger_middle.pcd  finger_top.pcd  palm.pcd  thumb_bottom.pcd  thumb_bottom2.pcd  thumb_middle.pcd
src/Core/Math/: CMat44.cpp
src/Filter/: filterPCL.cpp
src/Grabber/: kinect_grabber.cpp
src/Kinematic/: kinematic_liego.cpp
src/Optimization/: optimizationPSO.cpp
src/OptimizationFunction/: optimizationFunctionGauss.cpp  optimizationFunctionPF.cpp
src/Visualizer/: visualizerGL.cpp  visualizerPCL.cpp
